# ppx_deriving_typename

./: .README.md.swp  .gitignore  Makefile  README.md  ppx_deriving_typename.opam
ppx/: .ppx_deriving_typename.ml.swp  jbuild  ppx_deriving_typename.ml
test/: jbuild  run.ml
